--- a/src/scss/_chatOptionsCarousel.scss
+++ b/src/scss/_chatOptionsCarousel.scss
@@ -1,6 +1,7 @@
 .chat-questions-carousel {
     height: fit-content;
     position: relative;
+    background-color: $white;
     .option {
         width: fit-content;
         height: fit-content;
