--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -5,6 +5,7 @@
     min-height: 5rem;
     padding: $p--s;
     gap: $gap--s;
+    background-color: $white;
     .input {
         flex: 1;
         border: none;
