--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 @import 'typography';
+@import 'scrollbar';
 @import 'icons';
 @import 'app';
 @import 'site';
+@import 'chatbotAvatar';
 @import 'buttons';
 @import 'cto';
 @import 'topBar';
