--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -7,6 +7,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+
     @include mq-480 {
         height: 66%;
         width: 48rem;
@@ -19,26 +20,27 @@
             width: 100%;
         }
     }
+
     &-container--minimized,
     &-container--showing {
-        transition: opacity .3s ease-in-out, transform .3s ease-in-out;
+        display: flex;
+        transition: opacity .3s ease-in-out, transform .3s ease-in-out, scale .3s ease-in-out;
     }
 
     &-container--minimized {
-        width: 8rem;
-        height: 8rem;
-        position: fixed;
-        bottom: $margin--m;
-        right: $margin--m;
+        position: absolute;
+        bottom: 32px;
+        right: 32px;
+        justify-content: flex-end;
+        margin-top: auto;
     }
 
     &-container--showing {
         height: 100%;
-        display: flex;
         flex-direction: column;
-        border-radius: $rounded--s;
+        border-top-left-radius: $rounded--s;
         overflow: hidden;
-        box-shadow: 0px 4px 18px -2px $gray--200;
+        box-shadow: 0px 4px 18px -2px $black;
     }
 
     &.showing {
@@ -52,16 +54,16 @@
         .chatbot-container--showing {
             opacity: 1;
             &.toMinimized {
-                transform: translate(50%, 50%) scale(0.8);
+                transform: translate(50%, 50%) scale(.8);
                 opacity: 0;
             }
         }
     }
     &.minimized {
         .chatbot-container--minimized {
-            opacity: .8;
-            &:hover {
-                opacity: 1;
+            &.toShowing {
+                transform: translate(50%, 50%) scale(.8);
+                opacity: 0;
             }
         }
         .chatbot-container--showing {
@@ -69,8 +71,13 @@
             opacity: 0;
             transform: translate(50%, 50%) scale(0.8);
             &.toShowing {
-                display: block;
+                display: flex;
             }
         }
+    }
+    &.closing {
+        opacity: 0;
+        transform: translateY(4px);
+        transition: opacity .3s ease-in-out, transform .3s ease-in-out;
     }
 }
