--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,4 +2,6 @@
     padding: $p--m;
     color: $gray--200;
     text-align: center;
+    background-color: $white;
+    border-top: 1px solid $gray;
 }
