--- a/src/scss/_keyframes.scss
+++ b/src/scss/_keyframes.scss
@@ -32,3 +32,50 @@
         opacity: 0;
     }
 }
+@keyframes scaleAndBounce {
+    0% {
+        transform: scale(1) translateY(1px); 
+    }
+    8% {
+        transform: scale(.9) translateY(4px); 
+    }
+    20% {
+        transform: scale(1) translateY(0);
+    }
+    100% {
+        transform: scale(1) translateY(0);
+    }
+}
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes bounce {
+    0% {
+      transform: translateY(0);  
+    }
+    30% {
+        transform: translateY(4px); 
+    }
+    60% {
+        transform: translateY(0); 
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+@keyframes bounceUp {
+    0% {
+      transform: translateY(0);  
+    }
+    40% {
+        transform: translateY(-2px); 
+    }
+    60% {
+        transform: translateY(-4); 
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
