--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -1,3 +1,17 @@
-@import './mixins';
 @include resetStyle;
 
+body {
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(11deg, rgba(124,0,255,1) 0%, rgba(97,31,234,1) 51%, rgba(97,31,234,1) 98%);
+}
+.header {
+    justify-content: space-between;
+    padding: $p--m;
+}
+.title {
+    color: $white;
+    font-size: $font--l;
+    line-height: $font--l;
+}
