--- a/src/scss/_topBar.scss
+++ b/src/scss/_topBar.scss
@@ -11,15 +11,11 @@
     &-profile {
       display: flex;
       align-items: center;
-    }
-    &-img {
-      width: 40px;
-      height: 40px;
+      justify-content: center;
+      background-color: $white;
+      width: 32px;
+      height: 32px;
       border-radius: 50%;
-      margin: 0 10px;
-    }
-    &-name {
-      color: $white;
     }
   }
 }
