--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,13 @@
 // Colors
-$main: oklch(69.71% 0.227 28.59);
+$main: oklch(48.82% 0.264 285.88);
 $white: oklch(100% 0 0);
+$white--100: oklch(100% 0 0 / 24%);
+$white--200: oklch(100% 0 0 / 32%);
 $gray: oklch(95% 0 0);
 $gray--100: oklch(87.09% 0 0);
 $gray--200: oklch(77.89% 0 0);
 $black: oklch(0% 0 0);
+$black--100: oklch(0% 0 0 / 25%);
 
 // Unit
 $unit--s: 1.2rem;
